--- a/jobdelas/src/main/resources/templates/usuario/cadastro.html
+++ b/jobdelas/src/main/resources/templates/usuario/cadastro.html
@@ -1,4 +1,3 @@
-<!-- PAGINA INICIAL LOGIN -->
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
@@ -10,12 +9,8 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../../static/css/home.css" />
-    <link
-      rel="icon"
-      href="../../static/img/iconehtml.png"
-      type="image/x-icon"
-    />
+    <link rel="stylesheet" href="/css/home.css" />
+    <link rel="icon" href="/img/iconehtml.png" type="image/x-icon" />
     <title>Cadastro</title>
   </head>
 
@@ -24,9 +19,7 @@
       <div class="cabecalho-fomulario">
         <h1>Cadastre-se</h1>
         <p>Faça conexões por todo o mundo</p>
-      </div>
-      <div class="main-formulario">
-        <form class="row g-3" class="formulario">
+        <form class="row g-3" className="formulario">
           <div class="col-md-6">
             <label for="name" class="form-label">Primeiro Nome</label>
             <input type="name" class="form-control" id="inputEmail4" />
