Fix: Nome completo

--- a/jobdelas/src/main/resources/templates/usuario/cadastro.html
+++ b/jobdelas/src/main/resources/templates/usuario/cadastro.html
@@ -22,21 +22,21 @@
         <form method="POST" class="row g-3" className="formulario"  th:object="${usuario}" enctype="multipart/form-data">
         <div class="col-md-6">
           <label for="name" class="form-label">Primeiro Nome</label>
-          <input type="text" class="form-control" id="nome" th:field="*{nome}">
+          <input type="text" class="form-control" id="nome" name="nome">
       </div>
-      <!-- <div class="col-md-6">
+      <div class="col-md-6">
           <label for="lastname" class="form-label">Sobrenome</label>
-          <input type="lastname" class="form-control" id="sobrenome">
-      </div> -->
+          <input type="text" class="form-control" id="sobrenome" name="sobrenome">
+      </div>
         
           <div class="col-12">
             <label for="exampleInputEmail1" class="form-label"
               >E-mail</label>
-            <input type="text" class="form-control" id="email"  th:field="*{email}"/>
+            <input type="email" class="form-control" id="email"  th:field="*{email}"/>
           </div>
           <div class="col-12">
             <label for="password" class="form-label">Senha</label>
-            <input type="text" class="form-control" id="senha"  th:field="*{senha}"/>
+            <input type="password" class="form-control" id="senha"  th:field="*{senha}"/>
           </div>
           <div class="col-12">
             <button id="botao-formulario" class="btn" role="button" type="submit">
