--- a/jobdelas/src/main/resources/templates/usuario/cadastro.html
+++ b/jobdelas/src/main/resources/templates/usuario/cadastro.html
@@ -19,25 +19,30 @@
       <div class="cabecalho-fomulario">
         <h1>Cadastre-se</h1>
         <p>Faça conexões por todo o mundo</p>
-        <form method="POST" class="row g-3" className="formulario"  th:object="${usuario}" enctype="multipart/form-data">
-        <div class="col-md-6">
-          <label for="name" class="form-label">Primeiro Nome</label>
-          <input type="text" class="form-control" id="nome" name="nome">
-      </div>
-      <div class="col-md-6">
-          <label for="lastname" class="form-label">Sobrenome</label>
-          <input type="text" class="form-control" id="sobrenome" name="sobrenome">
-      </div>
-        
+        <form method="POST" class="row g-3" className="formulario" th:object="${usuario}" enctype="multipart/form-data">
+          <div class="col-md-6">
+            <label for="name" class="form-label">Primeiro Nome</label>
+            <input type="text" class="form-control" id="nome" name="nome" required>
+          </div>
+          <div class="col-md-6">
+            <label for "lastname" class="form-label">Sobrenome</label>
+            <input type="text" class="form-control" id="sobrenome" name="sobrenome" required>
+          </div>
+
           <div class="col-12">
-            <label for="exampleInputEmail1" class="form-label"
-              >E-mail</label>
-            <input type="email" class="form-control" id="email"  th:field="*{email}"/>
+            <label for="exampleInputEmail1" class="form-label">E-mail</label>
+            <input type="email" class="form-control" id="email" th:field="*{email}" required/>
           </div>
           <div class="col-12">
             <label for="password" class="form-label">Senha</label>
-            <input type="password" class="form-control" id="senha"  th:field="*{senha}"/>
+            <input type="password" class="form-control" id="senha" th:field="*{senha}" required/>
           </div>
+
+          <!-- Bloco para exibir a mensagem de erro -->
+          <div th:if="${erro}" class="alert alert-danger col-12">
+            <p th:text="${erro}"></p>
+          </div>
+
           <div class="col-12">
             <button id="botao-formulario" class="btn" role="button" type="submit">
               Cadastrar
@@ -48,7 +53,7 @@
       </div>
       <a class="link-cadastre-se" href="">Tem conta? Login aqui</a>
     </div>
-  </form>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
