Fix: alterações de rota

--- a/jobdelas/src/main/resources/templates/login/login.html
+++ b/jobdelas/src/main/resources/templates/login/login.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="main-formulario">
-            <form method="POST" className="formulario" th:object="${usuario}" enctype="multipart/form-data">
+            <form method="GET" className="formulario" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
                     <input style="border-radius: 15px; border: 1px solid #B378FF; height: 45px;" type="email"
