--- a/jobdelas/src/main/resources/static/css/home.css
+++ b/jobdelas/src/main/resources/static/css/home.css
@@ -6,6 +6,7 @@
 }
 
 body {
+    background-image: url(../img/Backimg.svg);
     background-color: #B378FF;
     background-repeat: no-repeat;
     background-size: cover;
