--- a/jobdelas/src/main/resources/templates/login/login.html
+++ b/jobdelas/src/main/resources/templates/login/login.html
@@ -47,12 +47,12 @@
                         <p style="text-align: center; color: #B378FF;">OU</p>
                     </div>
                     <div style="display: flex; justify-content: center;">
-                        <a style="width: 50%; background-color: #fff; color: #B378FF;" href="#" class="btn active"
-                            role="button"><img style="height: 19px;" src="../assets/image/icons8-google 4.svg"
-                                alt="">Login com Gmail</a>
+                        <button id="botao-formulario" class="btn" role="button" type="submit">
+                            Login com Gmail
+                        </button>
                     </div>
                     <div style="text-align: center; margin-top: 50px;">
-                        <a class="link-referencia" href="cadastro.html">Não tem conta? Cadastre-se</a>
+                        <a class="link-referencia" href="cadastrar">Não tem conta? Cadastre-se</a>
                     </div>
             </form>
         </div>
