--- a/jobdelas/src/main/resources/templates/usuario/cadastro.html
+++ b/jobdelas/src/main/resources/templates/usuario/cadastro.html
@@ -47,7 +47,7 @@
           <div class="col-12"><p>OU</p></div>
         </form>
       </div>
-      <a class="link-cadastre-se" href="">Tem conta? Login aqui</a>
+      <a class="link-cadastre-se" href="login">Tem conta? Login aqui</a>
     </div>
 
     <script
