Controladores get vagas e home job delas

--- a/jobdelas/src/main/resources/templates/usuario/vagas.html
+++ b/jobdelas/src/main/resources/templates/usuario/vagas.html
@@ -1,75 +1,104 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CardVagas</title>
-</head>
+  </head>
 
-<body>
-    <section>
-        <div class="vagas">
-            <h2>Função</h2>
-            <p>Nome da empresa</p>
-            <p>Salário</p>
-            <p>Sobre</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus qui nesciunt voluptatem mollitia
-                quia minima ducimus fugiat inventore porro. Dolor eveniet ducimus quidem doloremque maxime sint
-                voluptatibus omnis itaque!</p>
-            <div>
-                <p>Localização:</p>
-                <button>Aplicar</button>
-            </div>
-            <span>Status da vaga</span>
-        </div>
-        
-        <div class="vagas">
-            <h2>Função</h2>
-            <p>Nome da empresa</p>
-            <p>Salário</p>
-            <p>Sobre</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus qui nesciunt voluptatem mollitia
-                quia minima ducimus fugiat inventore porro. Dolor eveniet ducimus quidem doloremque maxime sint
-                voluptatibus omnis itaque!</p>
-            <div>
-                <p>Localização:</p>
-                <button>Aplicar</button>
-            </div>
-            <span>Status da vaga</span>
-        </div>
+  <body>
+    <section class="input-group">
+      <span class="input-group-text">Cargo</span>
+      <input
+        type="text"
+        aria-label="Cargo"
+        class="form-control"
+        id="inputCargo"
+      />
 
-        <div class="vagas">
-            <h2>Função</h2>
-            <p>Nome da empresa</p>
-            <p>Salário</p>
-            <p>Sobre</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus qui nesciunt voluptatem mollitia
-                quia minima ducimus fugiat inventore porro. Dolor eveniet ducimus quidem doloremque maxime sint
-                voluptatibus omnis itaque!</p>
-            <div>
-                <p>Localização:</p>
-                <button>Aplicar</button>
-            </div>
-            <span>Status da vaga</span>
-        </div>
+      <span class="input-group-text">Localização</span>
+      <input
+        type="text"
+        aria-label="Localização"
+        class="form-control"
+        id="inputLocalizacao"
+      />
 
-        <div class="vagas">
-            <h2>Função</h2>
-            <p>Nome da empresa</p>
-            <p>Salário</p>
-            <p>Sobre</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus qui nesciunt voluptatem mollitia
-                quia minima ducimus fugiat inventore porro. Dolor eveniet ducimus quidem doloremque maxime sint
-                voluptatibus omnis itaque!</p>
-            <div>
-                <p>Localização:</p>
-                <button>Aplicar</button>
-            </div>
-            <span>Status da vaga</span>
-        </div>
-        
+      <button class="btn btn-primary">Buscar Vagas</button>
     </section>
-</body>
 
+    <section>
+      <div class="vagas">
+        <h2>Função</h2>
+        <p>Nome da empresa</p>
+        <p>Salário</p>
+        <p>Sobre</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus
+          qui nesciunt voluptatem mollitia quia minima ducimus fugiat inventore
+          porro. Dolor eveniet ducimus quidem doloremque maxime sint
+          voluptatibus omnis itaque!
+        </p>
+        <div>
+          <p>Localização:</p>
+          <button>Aplicar</button>
+        </div>
+        <span>Status da vaga</span>
+      </div>
+
+      <div class="vagas">
+        <h2>Função</h2>
+        <p>Nome da empresa</p>
+        <p>Salário</p>
+        <p>Sobre</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus
+          qui nesciunt voluptatem mollitia quia minima ducimus fugiat inventore
+          porro. Dolor eveniet ducimus quidem doloremque maxime sint
+          voluptatibus omnis itaque!
+        </p>
+        <div>
+          <p>Localização:</p>
+          <button>Aplicar</button>
+        </div>
+        <span>Status da vaga</span>
+      </div>
+
+      <div class="vagas">
+        <h2>Função</h2>
+        <p>Nome da empresa</p>
+        <p>Salário</p>
+        <p>Sobre</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus
+          qui nesciunt voluptatem mollitia quia minima ducimus fugiat inventore
+          porro. Dolor eveniet ducimus quidem doloremque maxime sint
+          voluptatibus omnis itaque!
+        </p>
+        <div>
+          <p>Localização:</p>
+          <button>Aplicar</button>
+        </div>
+        <span>Status da vaga</span>
+      </div>
+
+      <div class="vagas">
+        <h2>Função</h2>
+        <p>Nome da empresa</p>
+        <p>Salário</p>
+        <p>Sobre</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur natus
+          qui nesciunt voluptatem mollitia quia minima ducimus fugiat inventore
+          porro. Dolor eveniet ducimus quidem doloremque maxime sint
+          voluptatibus omnis itaque!
+        </p>
+        <div>
+          <p>Localização:</p>
+          <button>Aplicar</button>
+        </div>
+        <span>Status da vaga</span>
+      </div>
+    </section>
+  </body>
 </html>
