--- a/jobdelas/src/main/resources/templates/usuario/usuario.html
+++ b/jobdelas/src/main/resources/templates/usuario/usuario.html
@@ -1,37 +1,88 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Atualizar Usuário</title>
-  </head>
-  <body>
-    <h1>Atualizar Usuário</h1>
-    <form
-      method="PUT"
-      className="formulario"
-      th:object="${usuario}"
-      enctype="multipart/form-data"
-    >
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" required />
 
-      <label for="email">Email:</label>
-      <input type="text" id="email" required />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+  <title>Atualizar Usuário</title>
+</head>
 
-      <label for="senha">Senha:</label>
-      <input type="password" id="senha" required />
+<body>
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+    Perfil
+  </button>
 
-      <label for="resumo">Resumo:</label>
-      <textarea id="resumo"></textarea>
+  <!-- Modal -->
+  <div class="modal" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
 
-      <label for="telefone">Telefone:</label>
-      <input type="text" id="telefone" required />
+        <!-- Cabeçalho do Modal -->
+        <div class="modal-header">
+          <h4 class="modal-title">Perfil</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
 
-      <label for="portfolio">Link para o Portfólio:</label>
-      <input type="text" id="portfolio" />
+        <!-- Corpo do Modal -->
+        <div class="modal-body">
+          <form method="PUT" class="formulario" th:object="${usuario}" enctype="multipart/form-data">
+            <div class="form-group">
+              <label for="imageUpload">Anexar Foto de Perfil:</label>
+              <input type="file" class="form-control-file" id="imageUpload" />
+            </div>
+            <div class="form-group">
+              <label for="nome">Nome:</label>
+              <input type="text" class="form-control" id="nome" required />
+            </div>
 
-      <button type="submit">Atualizar</button>
-    </form>
-  </body>
+            <div class="form-group">
+              <label for="email">Email:</label>
+              <input type="text" class="form-control" id="email" required />
+            </div>
+
+            <div class="form-group">
+              <label for="senha">Senha:</label>
+              <input type="password" class="form-control" id="senha" required />
+            </div>
+
+            <div class="form-group">
+              <label for="resumo">Resumo:</label>
+              <textarea class="form-control" id="resumo"></textarea>
+            </div>
+
+            <div class="form-group">
+              <label for="telefone">Telefone:</label>
+              <input type="text" class="form-control" id="telefone" required />
+            </div>
+
+            <div class="form-group">
+              <label for="portfolio">Link para o Portfólio:</label>
+              <input type="text" class="form-control" id="portfolio" />
+            </div>
+          </form>
+        </div>
+
+        <!-- Rodapé do Modal -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+          <button type="submit" class="btn btn-primary">Atualizar</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
