--- a/jobdelas/src/main/resources/templates/usuario/tarefas.html
+++ b/jobdelas/src/main/resources/templates/usuario/tarefas.html
@@ -1,43 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-    <title>Tarefas</title>
+    <link rel="stylesheet" href="/css/index.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    <title>Lista de Tarefas</title>
 </head>
-
 <body>
-
-    <form id="taskForm">
-        <div class="form-group">
-            <label for="titulo">Título da Tarefa:</label>
-            <input type="text" class="form-control" id="titulo" required>
+    <div class="form-group">
+        <h1>Lista de Tarefas</h1>
+        <form action="POST"></form>
+        <div>
+            <input type="text" class="tituloTarefa" placeholder="Título da Tarefa">
+            <textarea class="descricao" placeholder="Descrição da Tarefa"></textarea>
+            <button type="submit" class="botao_addTarefa">Adicionar Tarefa</button>
         </div>
-        <div class="form-group">
-            <label for="descricao">Descrição da Tarefa:</label>
-            <textarea class="form-control" id="descricao" rows="3" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Adicionar Tarefa</button>
-    </form>
-
-    <!-- Lista de tarefas -->
-    <ul class="list-group mt-3" id="taskList">
-        <!-- As tarefas serão adicionadas dinamicamente aqui -->
-    </ul>
+        <ul id="taskList">
+            <li>Reunião</li>
+            <li>PageGroup Mulheres e Tecnologia</li>
+        </ul>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
 </body>
-
 </html>
